Ajout les test Junit et Mockito pour sonarqube